--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,14 +9,17 @@ galaxy_info:
   platforms:
   - name: ArchLinux
     versions:
-    - all
+      - all
+  - name: FreeBSD
+    versions:
+      - 11.0
   - name: Ubuntu
     versions:
-    - xenial
+      - xenial
   - name: Debian
     versions:
-    - jessie
-    - sid
-    - stretch
+      - jessie
+      - sid
+      - stretch
 
   galaxy_tags: [web]
